  create a new extension on their own based on this library.
- As a consequence of documenting this library from a developers view point,
  simplifications were made to the code by removing interfaces in favor of the
  base class that implements that interface:
  - Removed TranslatorInterface
  - Removed ContainerInterface
  - Removed ConfigStoreInterface
  - Removed ConfigInterface

5.3.0 (2018-04-09)
------------------
- WC: statusoverzicht uitgeschakeld voor deze versie.
- ALL: Gebruik de opgezochte btw percentages van de productinformatie als de
  berekende btw bandbreedte zo wijd is dat er meerdere btw percentages mogelijk
  zijn.
- ALL: Do not render the for attribute with a label for a markup element.
- ALL: Controls op Batchscherm aangepast: radio buttons voor verzendwijzen en
  een aparte checkbox voor dry-run.
- ALL: Methods Form::getDateFormat() en Form::geShopDateFormat() zijn
  verwijderd. Die shops die nog geen html5 input type=date gebruiken, krijgen
  een (html5 attribuut) placeholder met het verwachte formaat dat
  gestandaardiseerd is op wat een date field verstuurt (yyyy-mm-dd).
- Refactor: centralise date formats.

5.2.2 (2018-03-16)
------------------
- ALL: security review: better code and document security measures taken. Some
  additional escaping was added, mostly input coming from the Acumulus API, so
  no real security risks were discovered.
- WC: 2e versie van de "dashboard" functionaliteit.
- ALL: Moved order/credit note related getting methods from Creator to Source.
- ALL: Replace FormRenderer::setUsePopupDescription() with more generic
  FormRenderer:::setProperty().
- All: Allow for label and label wrapper specific attributes in form fields.
- All: Notice: Undefined index: vatrate in Completor.php on line 989.

5.2.1 (2018-03-05)
------------------
- WC: Toon status van de boeking in Acumulus in het admnin shop order formulier.
  dit is de eerste versie van de "dashboard" functionaliteit.