@@ -9,7 +9,7 @@ use Siel\Acumulus\PluginConfig;
 /**
  * Defines an interface to access the shop specific's capabilities.
  */
-abstract class ShopCapabilities implements ShopCapabilitiesInterface
+abstract class ShopCapabilities
 {
     /** @var \Siel\Acumulus\Helpers\Translator */
     protected $translator;
@@ -49,7 +49,28 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
     }
 
     /**
-     * @inheritDoc
+     * Returns an array with shop specific environment settings.
+     *
+     * @return array
+     *   An array with keys:
+     *   - moduleVersion
+     *   - shopName
+     *   - shopVersion
+     */
+    abstract public function getShopEnvironment();
+
+    /**
+     * Returns an array with shop specific configuration defaults.
+     *
+     * @return array
+     */
+    abstract public function getShopDefaults();
+
+    /**
+     * Returns a list with the shop specific tokens.
+     *
+     * @return string[][]
+     *   An array with arrays of tokens keyed by the object name.
      */
     public function getTokenInfo()
     {
@@ -76,12 +97,24 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
         );
     }
 
+    /**
+     * Returns an option list of all shop order statuses.
+     *
+     * @return array
+     *   An array of all shop order statuses, with the key being the ID for
+     *   the dropdown item and the value being the label for the dropdown item.
+     */
+    abstract public function getShopOrderStatuses();
 
     /**
-     * {@inheritdoc}
+     * Returns a list of invoice source types supported by this shop.
      *
-     * This default implementation returns order and credit note. Override if
-     * the specific shop supports other types or does not support credit notes.
+     * The default implementation returns order and credit note. Override if the
+     * specific shop supports other types or does not support credit notes.
+     *
+     * @return string[]
+     *   The list of supported invoice source types. The keys are the internal
+     *   constants, the values are translated labels.
      */
     public function getSupportedInvoiceSourceTypes()
     {
@@ -92,7 +125,15 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
     }
 
     /**
-     * {@inheritdoc}
+     * Returns an option list of all shop invoice related events.
+     *
+     * This list represents the shop initiated events that may trigger the
+     * sending of the invoice to Acumulus.
+     *
+     * @return array
+     *   An array of all shop invoice related events, with the key being the ID
+     *   for the dropdown item (a Plugin::TriggerInvoiceEvent_...
+     *   const) and the value being the label for the dropdown item.
      */
     public function getTriggerInvoiceEventOptions()
     {
@@ -102,7 +143,18 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
     }
 
     /**
-     * {@inheritdoc}
+     * Returns a list of valid sources that can be used as invoice number.
+     *
+     * This may differ per shop as not all shops support invoices as a separate
+     * entity.
+     *
+     * Overrides should typically return a subset of the constants defined in
+     * this base implementation, but including at least
+     * Plugin::InvoiceNrSource_Acumulus.
+     *
+     * @return array
+     *   An array keyed by the option values and having translated descriptions
+     *   as values.
      */
     public function getInvoiceNrSourceOptions()
     {
@@ -114,7 +166,18 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
     }
 
     /**
-     * {@inheritdoc}
+     * Returns a list of valid date sources that can be used as invoice date.
+     *
+     * This may differ per shop as not all shops support invoices as a separate
+     * entity.
+     *
+     * Overrides should typically return a subset of the constants defined in
+     * this base implementation, but including at least
+     * Plugin::InvoiceDate_Transfer.
+     *
+     * @return array
+     *   An array keyed by the option values and having translated descriptions
+     *   as values.
      */
     public function getDateToUseOptions()
     {
@@ -125,9 +188,27 @@ abstract class ShopCapabilities implements ShopCapabilitiesInterface
         );
     }
 
+    /**
+     * Returns an option list of active payment methods.
+     *
+     * @return array
+     *   An array of active payment methods. with the key being the ID (internal
+     *   name) for the dropdown item and the value being the label for the
+     *   dropdown item.
+     */
+    abstract public function getPaymentMethods();
 
     /**
-     * {@inheritdoc}
+     * Returns a link to the config form page.
+     *
+     * If the webshop adds a session token or something like that to
+     * administrative links, the returned link will contain so as well.
+     *
+     * @param string $formType
+     *   The form to get the link to.
+     *
+     * @return string
+     *   The link to the requested form page.
      */
     public function getLink($formType)
     {
