@@ -28,6 +28,7 @@ WC3 = WooCommerce 3 (WordPress)
   - Removed ContainerInterface
   - Removed ConfigStoreInterface
   - Removed ConfigInterface
+  - Removed ShopCapabilitiesInterface
 
 5.3.0 (2018-04-09)
 ------------------
